--- a/style.css
+++ b/style.css
@@ -1,3 +1,68 @@
 body {
+  background-color: violet;
+}
+
+.wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
   background-color: white;
+  border: 1px solid black;
+  border-radius: 10px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+h1 {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-weight: lighter;
+  text-align: center;
+  margin: 0 20px 20px 20px;
+}
+
+select {
+  width: 100%;
+  padding: 5px;
+  margin: 0 0 20px 0;
+  border-radius: 5px;
+}
+
+.city {
+  display: flex;
+  justify-content: space-between;
+  align: center;
+  margin: 20px;
+  border-bottom: 1px dashed black;
+}
+
+h2 {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-weight: lighter;
+  margin: 0;
+}
+
+.date {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.5);
+  margin: 10px 0 20px 0;
+}
+
+.time {
+  font-size: 42px;
+}
+
+.am-pm {
+  font-size: 21px;
+  vertical-align: middle;
+  margin-left: -5px;
+}
+
+.signature {
+  color: rgba(11, 11, 11, 0.8);
+  margin: 20px 60px;
+  font-family: monospace;
+}
+
+a {
+  color: rgba(11, 11, 11, 0.8);
 }
