--- a/style.css
+++ b/style.css
@@ -1,25 +1,31 @@
 body {
   background-color: rgba(71, 102, 59);
   color: white;
+  background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/160/101/original/kyle-glenn-nXt5HtLmlgE-unsplash.jpg?1741821028");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 700px;
 }
 
 .wrapper {
   max-width: 500px;
   margin: 60px auto;
   padding: 20px 60px;
-  background-color: rgba(71, 102, 59);
-  border: 5px solid rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.75);
   border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
-  margin: 0 20px 30px 20px;
+  margin: 0;
   letter-spacing: 20px;
   text-transform: uppercase;
-  font-size: 16px;
-  color: rgba(255, 255, 255, 0.4);
+  font-size: 60px;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
 }
 
 select {
@@ -34,7 +40,7 @@ select {
 .city-info {
   display: flex;
   justify-content: space-between;
-  margin: 5px 5px 25px 5px;
+  margin: 10px;
   border-bottom: 1px dashed rgba(255, 255, 255, 0.3);
 }
 
@@ -46,20 +52,22 @@ select {
 h2 {
   font-family: Georgia, "Times New Roman", Times, serif;
   font-weight: lighter;
-  font-size: 32px;
+  font-size: 24px;
   letter-spacing: 2px;
   margin: 0;
+  color: rgb(0, 0, 0);
 }
 
 .date {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 14px;
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(0, 0, 0, 0.7);
   margin: 10px 0 20px 0;
 }
 
 .time {
   font-size: 40px;
+  color: black;
 }
 
 small {
@@ -69,12 +77,17 @@ small {
 }
 
 .signature {
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.8);
   text-align: center;
+  margin-top: 180px;
   font-family: monospace;
 }
 
 a {
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.8);
   font-family: monospace;
+}
+
+.refresh {
+  color: rgba(0, 0, 0, 0.5);
 }
