CSS revamp, moved refresh link

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-  background-color: rgba(71, 102, 59);
+  background-color: rgba(255, 255, 255);
   color: white;
-  background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/160/101/original/kyle-glenn-nXt5HtLmlgE-unsplash.jpg?1741821028");
+  background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/160/181/original/cesar-couto-27HiryxnHJk-unsplash.jpg?1741899314");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -9,39 +9,51 @@ body {
 }
 
 .wrapper {
-  max-width: 500px;
-  margin: 60px auto;
-  padding: 20px 60px;
-  background-color: rgba(255, 255, 255, 0.75);
-  border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  max-width: 600px;
+  height: 270px;
+  margin: 50px auto;
+  padding: 30px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px;
 }
 
-h1 {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+/* h1 {
+  font-family: Georgia, "Times New Roman", Times, serif;
   text-align: center;
-  margin: 0;
+  margin: 10px;
   letter-spacing: 20px;
   text-transform: uppercase;
-  font-size: 60px;
-  font-weight: bold;
-  color: rgb(255, 255, 255);
-}
+  font-size: 20px;
+  font-weight: bolder;
+  color: #91aab5;
+} */
 
 select {
   width: 100%;
-  padding: 7px;
-  margin-bottom: 30px;
+  padding: 10px;
+  margin: 5px auto;
   border: none;
   border-radius: 5px;
-  font-size: 14px;
+  font-size: 16px;
+}
+
+.selected {
+  text-align: right;
+  margin: 0;
+  padding: 0;
+}
+
+.refresh {
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .city-info {
-  display: flex;
+  /* display: flex;
   justify-content: space-between;
+  align-items: baseline; */
+  text-align: center;
   margin: 10px;
-  border-bottom: 1px dashed rgba(255, 255, 255, 0.3);
 }
 
 .city-info:last-child {
@@ -50,44 +62,41 @@ select {
 }
 
 h2 {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: monospace;
   font-weight: lighter;
-  font-size: 24px;
+  font-size: 40px;
   letter-spacing: 2px;
-  margin: 0;
+  margin: 10px;
+  margin-top: 30px;
   color: rgb(0, 0, 0);
 }
 
-.date {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 14px;
-  color: rgba(0, 0, 0, 0.7);
-  margin: 10px 0 20px 0;
-}
-
 .time {
+  font-family: monospace;
   font-size: 40px;
-  color: black;
+  margin: 20px;
+  color: rgb(0, 0, 0);
 }
 
 small {
   font-size: 21px;
-  vertical-align: middle;
-  margin-left: -5px;
+  margin-left: -20px;
+}
+
+.date {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.7);
+  margin: 10px;
 }
 
 .signature {
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(0, 0, 0, 0.5);
   text-align: center;
-  margin-top: 180px;
   font-family: monospace;
 }
 
 a {
-  color: rgba(255, 255, 255, 0.8);
-  font-family: monospace;
-}
-
-.refresh {
   color: rgba(0, 0, 0, 0.5);
+  font-family: monospace;
 }
